# aoc-solutions-rust

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs
src/utility/: assembunny.rs  directions.rs  hash.rs  input.rs  matrix.rs  mod.rs  modular.rs  parsing.rs  ranges.rs  tree.rs
src/y2016/: c10_comparing_bots.rs  c11_generator_elevators.rs  c12_assembunny.rs  c13_generate_maze.rs  c14_consecutive_hashes.rs  c15_disc_capsule_fall.rs  c16_dragon_curve_fill.rs  c17_hash_door_locks.rs  c18_generating_traps.rs  c19_elf_presents.rs  c1_taxi_driving.rs  c20_ip_ranges.rs  c21_scramble_password.rs  c22_filesystem_storage.rs  c23_cracking_safe.rs  c24_travelling_robot.rs  c25_assembunny_wave.rs  c2_code_walk.rs  c3_triangle_check.rs  c4_room_checksums.rs  c5_hash_passwords.rs  c6_jumbled_message.rs  c7_ipv7_check.rs  c8_screen_code.rs  c9_decompressing_text.rs  mod.rs
src/y2017/: c1.rs  c2.rs  c3.rs  mod.rs
src/y2022/: c10_cpu_cycles.rs  c1_elf_calories.rs  c2_rock_paper_scissors.rs  c3_rucksack_items.rs  c4_elf_ranges.rs  c5_move_crates.rs  c6_signal_fix.rs  c7_filesystem.rs  c8_count_trees.rs  c9_rope_follow.rs  mod.rs
src/y2025/: c1.rs  c10.rs  c11.rs  c12.rs  c2.rs  c3.rs  c4.rs  c5.rs  c6.rs  c7.rs  c8.rs  c9.rs  mod.rs
