[package]
name = "aoc-solutions-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
num = "0.4.3"
md-5 = "0.10"
regex = "1.11.1"
lazy_static = "1.5.0"
nalgebra = "0.33.2"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls"] }
dotenvy ={ version = "0.15.7" }